// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DpNotifyMessage always renders with closemark 1`] = `
"<div class=\\"c-notify__message c-notify__message--error\\"><i aria-hidden=\\"true\\" class=\\"c-notify__closer fa fa-times-circle cursor--pointer\\"></i>
  <div class=\\"cf\\"><i class=\\"fa u-mt-0_125 u-mr-0_25 float--left fa-exclamation-circle\\"></i>
    <div class=\\"u-ml\\">

      <!---->
    </div>
  </div>
</div>"
`;

exports[`DpNotifyMessage always renders with closemark 2`] = `
"<div class=\\"c-notify__message c-notify__message--confirm\\"><i aria-hidden=\\"true\\" class=\\"c-notify__closer fa fa-times-circle cursor--pointer\\"></i>
  <div class=\\"cf\\"><i class=\\"fa u-mt-0_125 u-mr-0_25 float--left fa-check-circle\\"></i>
    <div class=\\"u-ml\\">

      <!---->
    </div>
  </div>
</div>"
`;
